--- a/app/templates/deliverymen/list_deliverymen.html
+++ b/app/templates/deliverymen/list_deliverymen.html
@@ -93,6 +93,7 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
                 <form id="deleteForm" method="POST" style="display: inline;">
+                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                     <button type="submit" class="btn btn-danger">Supprimer</button>
                 </form>
             </div>
