--- a/app/templates/employees/manual_attendance.html
+++ b/app/templates/employees/manual_attendance.html
@@ -29,6 +29,7 @@
                 </div>
                 <div class="card-body">
                     <form method="POST">
+                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
@@ -224,6 +225,7 @@ document.addEventListener('DOMContentLoaded', function() {
                 
                 // Champs du formulaire
                 const fields = {
+                    'csrf_token': '{{ csrf_token() }}',
                     'employee_id': employeeId,
                     'punch_type': punchType,
                     'timestamp': timestamp,
